WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305961
Web Inspector broken and shows up blank
https://bugs.webkit.org/show_bug.cgi?id=305961
Summary
Web Inspector broken and shows up blank
Qianlang Chen
Reported
2026-01-21 12:09:58 PST
Revert
305784@main
because Web Inspector broken and shows up blank.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-21 12:10:11 PST
<
rdar://problem/168607298
>
Qianlang Chen
Comment 2
2026-01-21 12:13:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56982
Qianlang Chen
Comment 3
2026-01-21 12:17:16 PST
rdar://168607298
Qianlang Chen
Comment 4
2026-01-21 12:17:32 PST
rdar://168518844
EWS
Comment 5
2026-01-22 12:00:46 PST
Committed
306030@main
(7f648983fdd6): <
https://commits.webkit.org/306030@main
> Reviewed commits have been landed. Closing PR #56982 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug